--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
 
             </ul>
         </nav>
+        <div id="hamburger-icon" onclick="toggleMobileMenu(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+            <ul class="mobile-menu">
+                <li><a href=/home">Home</a></li>
+                <li><a href="/products">Poducts</a></li>
+                <li><a href="/about">About</a></li>
+                <li id="login"><a href="/login">Login</a></li>
+                <li id="signup"><a href="/signup">Signup</a></li>
+            </ul>
+        </div>
+
     </header>
+    <script src="script.js"></script>
 
 </body>
 
